--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-node_modules/
+chaser-admin-web/node_modules/
 dist/
 npm-debug.log*
 yarn-debug.log*
@@ -14,4 +14,4 @@ tests/**/coverage/
 *.ntvs*
 *.njsproj
 *.sln
-.idea/
+/.idea/
