--- a/chaser-admin-api/pom.xml
+++ b/chaser-admin-api/pom.xml
@@ -9,7 +9,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
-        <dependencies.version>B-1.0.1.RELEASE</dependencies.version>
+        <dependencies.version>B-1.0.2.RELEASE</dependencies.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -32,10 +32,10 @@
             <groupId>top.chaser.framework</groupId>
             <artifactId>chaser-starter-web</artifactId>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>top.chaser.framework</groupId>
             <artifactId>chaser-starter-swagger</artifactId>
-        </dependency>-->
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
